<resources>
    <string name="app_name">简单冥想</string>
    <string name="hello">你好，</string>
    <string name="welcome">欢迎来到简单冥想</string>
    <string name="logon_button">登录/注册</string>
    <string name="suggestion_course">推荐课程</string>
    <string name="suggestion_activity">推荐活动</string>
    <string name="logon_revive">如何在失眠中满血复活？</string>
    <string name="logon_revive_word">冥想新姿势，失眠的时候不遭罪</string>
    <string name="fisrt_use">首次开通 立享5折</string>
    <string name="totle">冥想</string>
    <string name="scene">场景</string>
    <string name="whith_noise">白噪音</string>
    <string name="guide_text_1_1">累了吗？</string>
    <string name="guide_text_1_2">里面请</string>
    <string name="guide_text_2_1">轻松</string>
    <string name="guide_text_2_2">是我们与生活的</string>
    <string name="guide_text_2_3">相处之道</string>
    <string name="guide_text_3_1">宁静</string>
    <string name="guide_text_3_2">以呼吸的名义</string>
    <string name="guide_text_3_3">丈量内心</string>
    <string name="guide_text_4_1">准备好了吗？</string>
    <string name="guide_text_4_2">那就开始吧</string>
    <string name="guide_btn">立即体验</string>
    <string name="logon">登录</string>
    <string name="phone_number">手机号码</string>
    <string name="enter_password">输入密码</string>
    <string name="enter_password_2">确认密码</string>
    <string name="forget_password"><u>忘记密码?</u></string>
    <string name="scene_signal"></string><!--/-->
    <string name="wechat_friends">微信好友</string>
    <string name="wechat_moments">朋友圈</string>
    <string name="qq_friends">QQ好友</string>
    <string name="qq_space">QQ空间</string>
    <string name="sina_weibo">新浪微博</string>
    <string name="white_noise_time">00:00</string>
    <string name="ssdk_oks_cancel">取消</string>
    <string name="submit">提交</string>
    <string name="validation_code">验证码</string>
    <string name="phone_number_is_empty">用户不能为空</string>
    <string name="phone_number_is_invalid">请输入正确的手机号</string>
    <string name="password_is_lower_minimum">密码至少需要6位</string>
    <string name="password_is_exceed_maximum">密码至多只能18位</string>
    <string name="password_is_not_align">请重新确认密码两次输入是否一致</string>
    <string name="sms_code_is_invalid">验证码不能为空</string>
    <string name="send_sms_code">发送验证码</string>
    <string name="sms_countdown_time">秒后再次</string>
    <string name="vip">会员</string>
    <string name="empty1">空空如也</string>
    <string name="empty2">快去找些自己喜欢的音频吧</string>
    <string name="pay_type">支付方式</string>
    <string name="ali_pay">支付宝</string>
    <string name="wechat_pay">微信</string>
    <string name="free">限免</string>
    <string name="class_list">课程列表</string>
    <string name="download_class_list">下载全部课程</string>
    <string name="renew">续费</string>
    <string name="vip_center">会员中心</string>
    <string name="pratice_center">练习记录</string>
    <string name="suggestion">意见反馈</string>
    <string name="versionInfo">版本信息</string>
    <string name="to_renew">去续费>></string>
    <string name="to_buy">去购买>></string>
    <string name="vip_expire">会员还有%1$s天到期</string>
    <string name="not_vip">您还不是会员</string>
    <string name="buy">购买</string>
    <string name="vip_date">会员有效期至：%1$s</string>
    <string name="total_time">累计时长（分钟）</string>
    <string name="total_date">累计天数</string>
    <!--login & reg-->
    <string name="login_via_phone">手机登录</string>
    <string name="login_via_qq">QQ</string>
    <string name="login_via_wechat">微信</string>
    <string name="login_via_weibo">微博</string>
    <string name="register">手机注册 >></string>
    <string name="register_success">用户注册成功</string>
    <string name="sms_code">验证码已发送</string>
    <string name="login_policy"><![CDATA[登录即代表同意<U>简单冥想用户隐私政策</U>]]></string>
    <string name="wechat_contact">如果购买中遇到问题请添加客服微信jiandan-2019</string>
    <string name="login_3rd_party_auth_fail">认证失败</string>
    <string name="login_3rd_party_auth_cancel">取消授权认证</string>
    <string name="selection_edit">编辑精选</string>
    <string name="login_success">登录成功</string>

    <string name="app_version">当前版本 : V</string>
    <string name="app_policy"><![CDATA[<U>《简单冥想用户隐私服务协议》</U>]]></string>
    <string name="app_feedback">如需反馈&lt;简单冥想&gt;使用中的任何问题或建议，欢迎通过邮件联系我们，我们会在第一时间给予反馈。</string>
    <string name="app_query">邮箱：service@simplemeditation.cn</string>
    <string name="app_query_title">意见反馈</string>
    <string name="logoff">退出登录</string>
    
    <string name="avatar">头像</string>
    <string name="nick_name">昵称</string>
    <string name="phone_number_1">手机号</string>
    <string name="update_password">修改密码</string>
    <string name="old_password">旧密码</string>
    <string name="new_password">新密码</string>
    <string name="update_password_success">密码修改成功</string>
    <string name="update_user_info_success">用户信息修改成功</string>
    <string name="nike_name_cannot_null">昵称不允许为空</string>

    <string name="complete">完成</string>
    <string name="practice_course">练习课程</string>
    <string name="continue_day_count">连续收听</string>
    <string name="duration_count">累计时长</string>
    <string name="meet">与简单生活不期而遇</string>
    <string name="share_img">分享图片</string>

    <string name="practice_record">练习记录</string>

    <string name="white_noise_1">雨天</string>
    <string name="white_noise_2">海浪</string>
    <string name="white_noise_3">鸟叫声</string>
    <string name="white_noise_4">水滴</string>
    <string name="white_noise_5">篝火</string>
    <string name="white_noise_6">风</string>
    <string name="white_noise_7">火车</string>
    <string name="white_noise_8">落叶</string>
    <string name="white_noise_9">溪流</string>
    <string name="share_day">天</string>
    <string name="share_mins">分钟</string>

    <string name="vip_money_sign">¥</string>

</resources>
