<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mainColor">
    <ImageView
        android:layout_marginTop="50dp"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:scaleType="centerInside"
        android:src="@drawable/guide1"/>
    <TextView
        android:layout_gravity="center"
        android:text="@string/guide_text_2_1"
        android:textSize="33sp"
        android:textColor="@color/guideText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView
        android:layout_gravity="center"
        android:text="@string/guide_text_2_2"
        android:textSize="33sp"
        android:textColor="@color/guideText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView
        android:layout_gravity="center"
        android:text="@string/guide_text_2_3"
        android:textSize="33sp"
        android:textColor="@color/guideText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
</LinearLayout>