<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mainColor">
    <ImageView
        android:layout_marginTop="50dp"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:scaleType="centerInside"
        android:src="@drawable/guide4"/>
    <TextView
        android:layout_gravity="center"
        android:text="@string/guide_text_4_1"
        android:textSize="33sp"
        android:textColor="@color/guideText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView
        android:layout_gravity="center"
        android:text="@string/guide_text_4_2"
        android:textSize="33sp"
        android:textColor="@color/guideText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="15dp">
        <Button
            android:id="@+id/vp_guide_btn"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_circle_shape2"
            android:text="@string/logon_button" />
    </RelativeLayout>
</LinearLayout>