<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mainColor">

    <Button
        android:id="@+id/login_close_btn"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginRight="18dp"
        android:layout_marginTop="18dp"
        android:background="@drawable/close" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/login_layout"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="40dp"
        android:src="@drawable/logo" />

    <TableLayout
        android:id="@+id/login_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <TableRow>

            <TextView
                android:id="@+id/login_via_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="30dp"
                android:drawablePadding="10dp"
                android:drawableTop="@drawable/ic_login_phone"
                android:gravity="center"
                android:text="@string/login_via_phone"
                android:textColor="@color/wordWhite"
                android:textSize="@dimen/text_size_normal" />

            <TextView
                android:id="@+id/login_via_wechat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:drawablePadding="10dp"
                android:drawableTop="@drawable/ic_login_wechat"
                android:gravity="center"
                android:text="@string/login_via_wechat"
                android:textColor="@color/wordWhite"
                android:textSize="@dimen/text_size_normal" />
        </TableRow>

        <TableRow android:layout_marginTop="60dp">

            <TextView
                android:id="@+id/login_via_qq"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="30dp"
                android:drawablePadding="10dp"
                android:drawableTop="@drawable/ic_login_qq"
                android:gravity="center"
                android:text="@string/login_via_qq"
                android:textColor="@color/wordWhite"
                android:textSize="@dimen/text_size_normal" />

            <TextView
                android:id="@+id/login_via_weibo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:drawablePadding="10dp"
                android:drawableTop="@drawable/ic_login_weibo"
                android:gravity="center"
                android:text="@string/login_via_weibo"
                android:textColor="@color/wordWhite"
                android:textSize="@dimen/text_size_normal" />
        </TableRow>
    </TableLayout>

    <Button
        android:id="@+id/register_btn"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_above="@+id/login_policy"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="40dp"
        android:background="@color/transparent1"
        android:text="@string/register"
        android:textColor="#686270"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/login_policy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"
        android:textColor="#645E6B"
        android:textSize="@dimen/text_size_normal"
        tools:text="test text" />
</RelativeLayout>
