<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/share_img">

    <ImageView
        android:id="@+id/pic_close_img"
        android:layout_alignParentRight="true"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:src="@drawable/close"/>
    <FrameLayout
        android:id="@+id/pic_share_img"
        android:layout_centerInParent="true"
        android:layout_width="300dp"
        android:layout_height="360dp">
        <ImageView
            android:id="@+id/image_pkg"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="fitXY"/>
        <LinearLayout
            android:layout_marginLeft="20dp"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_marginTop="45dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/logo_white"/>
                <TextView
                    android:layout_marginLeft="3dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name"
                    android:textColor="@color/wordWhite"
                    android:textSize="13sp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_marginTop="30dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/complete"
                    android:textColor="@color/wordWhite"
                    android:textSize="13sp" />
                <TextView
                    android:id="@+id/pic_course"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="开启美好一天"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:textColor="@color/pic_text"
                    android:textSize="12sp" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/practice_course"
                    android:textColor="@color/wordWhite"
                    android:textSize="12sp" />
            </LinearLayout>
            <LinearLayout
                android:layout_marginTop="40dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/continue_day_count"
                    android:textColor="@color/wordWhite"/>
                <TextView
                    android:id="@+id/pic_continue_day"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="2天"
                    android:textColor="@color/pic_text"
                    android:textSize="12sp" />
            </LinearLayout>
            <LinearLayout
                android:layout_marginTop="40dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/duration_count"
                    android:textColor="@color/wordWhite"/>
                <TextView
                    android:id="@+id/pic_duration_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="56分钟"
                    android:textColor="@color/pic_text"
                    android:textSize="12sp" />
            </LinearLayout>
            <LinearLayout
                android:layout_marginTop="40dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <com.example.simple.simplethink.vip.CircleImageView
                    android:id="@+id/user_info_avatar"
                    android:layout_width="26dp"
                    android:layout_height="26dp"
                    android:layout_marginRight="5dp" />
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:id="@+id/pic_nick_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/duration_count"
                        android:textColor="@color/wordWhite"
                        android:textSize="8sp"/>
                    <TextView
                        android:layout_marginTop="5dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/meet"
                        android:textColor="@color/pic_text"
                        android:textSize="8sp" />
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>
    </FrameLayout>
    <LinearLayout
        android:id="@+id/share_img_btn"
        android:layout_marginTop="5dp"
        android:layout_below="@+id/pic_share_img"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:layout_gravity="center_vertical"
            android:src="@drawable/share_media"/>
        <TextView
            android:layout_gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/share_img"
            android:textColor="@color/wordWhite"/>
    </LinearLayout>

</RelativeLayout>