<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/mainColor"
    tools:context=".login.LoginViaPhoneNumActivity">
    <include android:id="@+id/registerTitle"
        layout="@layout/title_tool"/>
    <RelativeLayout
        android:orientation="horizontal"
        android:minHeight="50dp"
        android:gravity="center_vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="28dp"
            android:text="@string/phone_number"
            android:textColor="@color/wordWhite"
            android:textSize="15sp">
        </TextView>
        <View
            android:layout_marginTop="3dp"
            android:layout_marginLeft="120dp"
            android:layout_width="1dp"
            android:layout_height="20dp"
            android:background="@color/divide_line_vertical" />
        <EditText
            android:id="@+id/login_phone_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="150dp"
            android:gravity="center_vertical"
            android:maxLength="11"
            android:inputType="number"
            android:textColor="@color/wordWhite"
            android:background="@null"/>
    </RelativeLayout>
    <RelativeLayout
        android:orientation="horizontal"
        android:minHeight="50dp"
        android:gravity="center_vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="28dp"
            android:text="@string/validation_code"
            android:textColor="@color/wordWhite"
            android:textSize="15sp">
        </TextView>
        <View
            android:layout_marginTop="3dp"
            android:layout_marginLeft="120dp"
            android:layout_width="1dp"
            android:layout_height="20dp"
            android:background="@color/divide_line_vertical" />
        <EditText
            android:id="@+id/validate_sms_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="150dp"
            android:gravity="center_vertical"
            android:maxLength="6"
            android:inputType="number"
            android:textColor="@color/wordWhite"
            android:background="@null"/>
        <TextView
            android:id="@+id/countDown"
            android:layout_alignParentRight="true"
            android:textSize="@dimen/course_txt"
            android:textColor="@color/logonButton"
            android:minHeight="30dp"
            android:text="@string/send_sms_code"
            android:gravity="center_vertical"
            android:paddingRight="15dp"
            android:paddingLeft="15dp"
            android:background="@drawable/send_sms_selector"
            android:layout_marginRight="25dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RelativeLayout>
    <RelativeLayout
        android:minHeight="50dp"
        android:gravity="center_vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="28dp"
            android:text="@string/enter_password"
            android:textColor="@color/wordWhite"
            android:textSize="15sp">
        </TextView>
        <View
            android:layout_marginTop="3dp"
            android:layout_marginLeft="120dp"
            android:layout_width="1dp"
            android:layout_height="20dp"
            android:background="@color/divide_line_vertical" />
        <EditText
            android:id="@+id/login_phone_number_pwd_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="150dp"
            android:maxLength="18"
            android:textColor="@color/wordWhite"
            android:background="@null"/>
    </RelativeLayout>
    <RelativeLayout
        android:minHeight="50dp"
        android:gravity="center_vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="28dp"
            android:text="@string/enter_password_2"
            android:textColor="@color/wordWhite"
            android:textSize="15sp">
        </TextView>
        <View
            android:layout_marginTop="3dp"
            android:layout_marginLeft="120dp"
            android:layout_width="1dp"
            android:layout_height="20dp"
            android:background="@color/divide_line_vertical" />
        <EditText
            android:id="@+id/login_phone_number_pwd_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="150dp"
            android:maxLength="18"
            android:textColor="@color/wordWhite"
            android:background="@null"/>
    </RelativeLayout>
    <Button
        android:id="@+id/submit_btn"
        android:layout_marginTop="55dp"
        android:layout_marginLeft="56dp"
        android:layout_marginRight="56dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_circle_shape2"
        android:textColor="@color/guideBtn"
        android:textSize="15dp"
        android:text="@string/submit" />

</LinearLayout>
