<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mainColor">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="44dp"
                android:layout_marginTop="52dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hello"
                    android:textColor="@color/wordWhite"
                    android:textSize="@dimen/hello_text_size" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/welcome"
                    android:textColor="@color/wordWhite"
                    android:textSize="@dimen/welcome_text_size"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/logon_register"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/button_circle_shape"
                    android:text="@string/logon_button" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="7dp"
                android:layout_marginTop="44dp"
                android:background="@color/blackItemLine" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="28dp"
                android:orientation="vertical"
                android:paddingStart="@dimen/default_view_horizontal_padding">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <View
                        android:layout_width="14dp"
                        android:layout_height="14dp"
                        android:layout_gravity="center"
                        android:layout_marginRight="5dp"
                        android:background="@drawable/button_circle_shape" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/suggestion_course"
                        android:textColor="@color/wordWhite"
                        android:textSize="@dimen/login_small_title" />
                </LinearLayout>
                <ScrollView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">
                        <android.support.v7.widget.RecyclerView
                            android:id="@+id/recommend_course"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">
                        </android.support.v7.widget.RecyclerView>
                    </LinearLayout>
                </ScrollView>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="7dp"
                android:layout_marginTop="44dp"
                android:background="@color/blackItemLine" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="28dp"
                android:orientation="vertical"
                android:paddingEnd="@dimen/default_view_horizontal_padding"
                android:paddingStart="@dimen/default_view_horizontal_padding">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <View
                        android:id="@+id/square_shape"
                        android:layout_width="14dp"
                        android:layout_height="14dp"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="5dp"
                        android:background="@drawable/button_circle_shape" />

                    <TextView
                        android:layout_toRightOf="@id/square_shape"
                        android:layout_alignParentTop="true"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/selection_edit"
                        android:textColor="@color/wordWhite"
                        android:textSize="@dimen/login_small_title" />
                    <ImageView
                        android:id="@+id/selection_more"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="5dp"
                        android:src="@drawable/next"/>
                </RelativeLayout>

                <ImageView
                    android:id="@+id/selection_image"
                    android:layout_width="match_parent"
                    android:layout_height="135dp"
                    android:layout_marginTop="15dp"
                    android:paddingStart="16sp"
                    android:paddingEnd="16sp"
                    android:scaleType="fitXY" />

                <TextView
                    android:id="@+id/selection_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="15dp"
                    android:text="@string/logon_revive"
                    android:textColor="@color/wordWhite"
                    android:textSize="@dimen/login_small_title" />

                <TextView
                    android:id="@+id/selection_sub_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/logon_revive_word"
                    android:textColor="@color/blackSuggesstion"
                    android:textSize="@dimen/logon_revive_word" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="7dp"
                android:layout_marginTop="30dp"
                android:background="@color/blackItemLine" />

            <ImageView
                android:id="@+id/bottom_banner"
                android:layout_width="wrap_content"
                android:layout_height="60dp" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>
